--- a/index.html
+++ b/index.html
@@ -3,40 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Gestión de Personal</title>
+    <title>Gestión de Personal Pro</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <style>
-        /* Un pequeño ajuste para que el buscador se vea mejor en móviles */
-        .header-tabla {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-        @media (min-width: 768px) {
-            .header-tabla {
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-            }
+        .header-acciones { display: flex; flex-wrap: wrap; gap: 10px; justify-content: space-between; align-items: center; margin-bottom: 20px; }
+        @media print { 
+            .no-print, button, #seccion-formulario, #buscador-cont { display: none !important; }
+            body { background: white; color: black; }
         }
     </style>
 </head>
 <body class="container">
-
     <header>
-        <hgroup>
-            <h1>👷 Gestión de Trabajadores</h1>
-            <h2>Panel Administrativo Full Stack (D1 + Hono + Pages)</h2>
-        </hgroup>
+        <h1>👷 Sistema de Gestión de Personal</h1>
     </header>
 
     <main>
         <section id="seccion-formulario">
             <article>
-                <header>
-                    <h3 id="titulo-form">➕ Añadir Nuevo Trabajador</h3>
-                </header>
+                <header><h3 id="titulo-form">➕ Añadir Trabajador</h3></header>
                 <form id="workerForm">
                     <div class="grid">
                         <input type="text" id="nombre" placeholder="Nombre" required>
@@ -47,9 +32,7 @@
                         <input type="text" id="cargo" placeholder="Cargo">
                         <input type="number" id="salario" placeholder="Salario">
                     </div>
-                    <footer>
-                        <button type="submit" id="btn-guardar">Guardar Trabajador</button>
-                    </footer>
+                    <button type="submit" id="btn-guardar">Guardar Trabajador</button>
                 </form>
             </article>
         </section>
@@ -57,29 +40,32 @@
         <hr>
 
         <section id="seccion-tabla">
-            <div class="header-tabla">
+            <div class="header-acciones">
                 <h3>📋 Lista de Personal</h3>
-                <input type="search" id="buscador" placeholder="🔍 Buscar por nombre o cargo..." style="max-width: 350px;">
+                <div id="buscador-cont" style="display: flex; gap: 10px;">
+                    <button class="outline contrast" onclick="generarPDF()">📄 PDF</button>
+                    <button class="outline contrast" onclick="exportarExcel()">📊 Excel</button>
+                    <input type="search" id="buscador" placeholder="🔍 Buscar..." style="max-width: 250px; margin: 0;">
+                </div>
             </div>
 
             <figure>
-                <table role="grid">
+                <table>
                     <thead>
                         <tr>
                             <th>ID</th>
                             <th>Trabajador</th>
                             <th>Cargo</th>
                             <th>Salario</th>
-                            <th>Acciones</th>
+                            <th class="no-print">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="tabla-cuerpo">
-                        </tbody>
+                    <tbody id="tabla-cuerpo"></tbody>
+                    <tfoot id="tabla-pie" style="font-weight: bold; background: #f9f9f9;"></tfoot>
                 </table>
             </figure>
         </section>
     </main>
-
     <script src="app.js"></script>
 </body>
 </html>
