--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <thead>
                         <tr>
                             <th>Nombre</th>
-                            <th>Puesto</th>
+                            <th>Cargo</th>
                             <th>DNI</th>
                             <th>Salario</th>
                             <th>Acciones</th>
@@ -93,8 +93,8 @@
                     <label for="dni">DNI
                         <input type="text" id="dni" name="dni" placeholder="12345678X" required>
                     </label>
-                    <label for="puesto">Puesto
-                        <input type="text" id="puesto" name="puesto" placeholder="Ej. Analista" required>
+                    <label for="cargo">Cargo
+                        <input type="text" id="cargo" name="cargo" placeholder="Ej. Analista" required>
                     </label>
                 </div>
 
