--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
                     <label for="cargo">Cargo
                         <input type="text" id="cargo" name="cargo" placeholder="Ej. Analista" required>
                     </label>
+
+                    <label for="fecha_contratacion">Fecha de Contratación
+        <input type="date" id="fecha_contratacion" name="fecha_contratacion" required>
+    </label>
+    <label for="activo" style="margin-top: 35px;">
+        <input type="checkbox" id="activo" name="activo" role="switch" checked>
+        Empleado Activo
+    </label>
                 </div>
 
                 <label for="salario">Salario Mensual</label>
