--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                             <th>Nombre</th>
                             <th>Cargo</th>
                             <th>DNI</th>
+                            <th>Fecha_contratacion</th>
+                            <th>Activo</th>
                             <th>Salario</th>
                             <th>Acciones</th>
                         </tr>
