--- a/index.html
+++ b/index.html
@@ -66,6 +66,25 @@
             <button class="outline" onclick="abrirModal()">+ Añadir Trabajador</button>
         </section>
 
+<section id="seccion-reportes" class="grid" style="margin-bottom: 2rem;">
+    <article style="padding: 1rem; text-align: center;">
+        <small style="color: var(--primary)">Total Personal</small>
+        <h2 id="rep-total">0</h2>
+    </article>
+    <article style="padding: 1rem; text-align: center;">
+        <small style="color: #2ecc71">Nómina Total</small>
+        <h2 id="rep-nomina">$0.00</h2>
+    </article>
+    <article style="padding: 1rem; text-align: center;">
+        <small style="color: #e67e22">Salario Promedio</small>
+        <h2 id="rep-promedio">$0.00</h2>
+    </article>
+    <article style="padding: 1rem; text-align: center;">
+        <small style="color: #3498db">Activos / Inactivos</small>
+        <h2 id="rep-activos">0 / 0</h2>
+    </article>
+</section>
+
         <section class="card-table">
             <figure>
                 <table role="grid">
